# micrograd

./: .gitignore  README.md  demo2.ipynb  demo3.ipynb  pyproject.toml
