[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "micrograd"
version = "0.1.0"
description = "A tiny scalar-valued autograd engine with a small PyTorch-like neural network library on top."
readme = "README.md"
requires-python = ">=3.6"
authors = [
    { name = "Andrej Karpathy", email = "andrej.karpathy@gmail.com" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = []

[project.optional-dependencies]
notebooks = [
    "numpy",
    "matplotlib",
    "scikit-learn",
    "graphviz",
]

[dependency-groups]
dev = [
    "numpy",
    "matplotlib",
    "scikit-learn",
    "graphviz",
]

test = [
    "pytest",
    "torch; python_version >= '3.9'",
]

[tool.setuptools.packages.find]
include = ["micrograd*"]